# sharemind

./: README.md  pyproject.toml
src/sharemind/: __init__.py  __main__.py  demo.py  sharemind.py  test.py
