[tool.poetry]
name = "sharemind"
version = "0.1.0"
description = "A demonstation of the core functionality of the Sharemind secure multiparty computation system"
authors = ["Ofek Zeevi <zeevi.ofek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tqdm = "^4.67.1"
click = "^8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sharemind = "sharemind.__main__:main"
